--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -16,7 +16,7 @@ jobs:
         sudo apt-get install -y gcovr
 
     - name: build
-      run: g++ -Wall -Wextra -fprofile-arcs -ftest-coverage -o tddchecker *.c*
+      run: g++ -Wall -Wextra -fprofile-arcs -ftest-coverage -o tddchecker *.c* -D UTEST
       
     - name: run
       run: ./tddchecker
